# yt-playlist-sum-be

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 1c5381cea25c_add_chat_and_history_tables.py  3fc4559bf74f_make_conversation_user_id_nullable.py  4db65fc8479d_initial_schema.py  5217b9e5e74e_create_videos_table_jsonb.py  ae7aa9f92c8a_initial_migration.py  b6dcec03b855_add_updated_at_to_conversations.py  b8c9f2d3e4a5_add_document_embeddings_table.py  c9d0e1f2a3b4_add_pgvector_extension.py  d1e2f3a4b5c6_upgrade_embedding_dimension_to_1024.py  d9e1a23a91cf_add_conversations_table_with_user_id.py  e2f3a4b5c6d7_add_jobs_table.py  eb4eedf542c5_add_users_table_and_update_conversations.py
app/: main.py  models.py
app/api/: auth.py  dependencies.py  endpoints.py
app/core/: auth.py  cache.py  config.py  constants.py  db.py  exceptions.py  limiter.py  logging.py  prompts.py
app/core/providers/: __init__.py  embedding_provider.py  enums.py  gemini_provider.py  groq_provider.py  llm_provider.py  pgvector_store.py  sentence_transformer_embedding.py  vector_store.py
app/models/: __init__.py  api.py  enums.py  proxy.py  sql.py  youtube.py
app/repositories/: chat.py  job.py  users.py  video.py
app/schemas/: request.py  response.py
app/services/: chat.py  chunking.py  extractive.py  ingestion.py  job_service.py  job_worker.py  llm.py  processor.py  proxy.py  retrieval.py  summarization.py  youtube.py
docs/: api-reference.md  architecture.md  authentication.md  configuration.md  database.md  development.md  extractive-summarization.md  llm-providers.md  proxy-service.md  rag-pipeline.md  summarization.md  youtube-service.md
tests/: conftest.py  repro_chat_transcripts.py  test_api_conversations.py  test_migrations.py  test_models.py
tests/services/: test_summarization.py
tests/utils/: migrations.py
