[project]
name = "yt-playlist-sum-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]
