[project]
name = "yt-playlist-sum-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.5",
    "greenlet>=3.3.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]
